--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ stages:
       workingDirectory: $(rootFolder)
       displayName: 'Use PHP version $(phpVersion)'
 
-    - script: composer install --no-interaction --working-dir=brokerage.be
+    - script: composer install --no-interaction --working-dir=commonbrokerage/brokerage.be
       workingDirectory: $(rootFolder)
       displayName: 'Composer install'
 
